--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -6,6 +6,11 @@
         <div class="col-md-8">
             <h1 translate="main.title">Welcome, Java Hipster!</h1>
             <p class="lead" translate="main.subtitle">This is your homepage</p>
+          <div id="nutmeg" style="position:relative;">
+            <img src="http://farm3.static.flickr.com/2687/4504839455_8ef5cfccfa.jpg" width="400px"/>
+          </div>
+
+        <button type="button" id="serialize">Serialize data</button>
 
             <div ng-switch="isAuthenticated()">
                 <div class="alert alert-success" ng-switch-when="true"
