--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,7 +31,7 @@ span.wrap { padding: 10px; }
 }
 </style>
     </head>
-    <body ng-app="jhipsterApp">
+    <body ng-app="ludecolApp">
         <!--[if lt IE 10]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
