Test découpage image

--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -7,7 +7,7 @@
             <h1 translate="main.title">Welcome, Java Hipster!</h1>
             <p class="lead" translate="main.subtitle">This is your homepage</p>
           <div id="nutmeg" style="position:relative;">
-            <img src="http://farm3.static.flickr.com/2687/4504839455_8ef5cfccfa.jpg" width="400px"/>
+            <img src="http://localhost:8080/im/toto.png" width="400px"/>
           </div>
 
         <button type="button" id="serialize">Serialize data</button>
