--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -6,9 +6,9 @@
         <div class="col-md-8">
             <h1 translate="main.title">Welcome, Java Hipster!</h1>
             <p class="lead" translate="main.subtitle">This is your homepage</p>
-          <div id="nutmeg" style="position:relative;">
-            <img src="http://localhost:8080/im/toto.png" width="400px"/>
-          </div>
+          
+            <img src="/assets/images/hipster.png" annotorious/>
+          
 
         <button type="button" id="serialize">Serialize data</button>
 
