Modele - Table Species

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -140,6 +140,10 @@ span.wrap { padding: 10px; }
         <script src="scripts/components/auth/provider/auth.session.service.js"></script>
         <script src="scripts/app/account/sessions/sessions.js"></script>
         <script src="scripts/app/account/sessions/sessions.controller.js"></script>
+        <script src="scripts/app/entities/species/species.js"></script>
+        <script src="scripts/app/entities/species/species.controller.js"></script>
+        <script src="scripts/app/entities/species/species-detail.controller.js"></script>
+        <script src="scripts/components/entities/species/species.service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
