Modede - Table Tag

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -144,6 +144,10 @@ span.wrap { padding: 10px; }
         <script src="scripts/app/entities/species/species.controller.js"></script>
         <script src="scripts/app/entities/species/species-detail.controller.js"></script>
         <script src="scripts/components/entities/species/species.service.js"></script>
+        <script src="scripts/app/entities/tag/tag.js"></script>
+        <script src="scripts/app/entities/tag/tag.controller.js"></script>
+        <script src="scripts/app/entities/tag/tag-detail.controller.js"></script>
+        <script src="scripts/components/entities/tag/tag.service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
