--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -148,6 +148,10 @@ span.wrap { padding: 10px; }
         <script src="scripts/app/entities/tag/tag.controller.js"></script>
         <script src="scripts/app/entities/tag/tag-detail.controller.js"></script>
         <script src="scripts/components/entities/tag/tag.service.js"></script>
+        <script src="scripts/app/entities/picture/picture.js"></script>
+        <script src="scripts/app/entities/picture/picture.controller.js"></script>
+        <script src="scripts/app/entities/picture/picture-detail.controller.js"></script>
+        <script src="scripts/components/entities/picture/picture.service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
