--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -152,6 +152,10 @@ span.wrap { padding: 10px; }
         <script src="scripts/app/entities/picture/picture.controller.js"></script>
         <script src="scripts/app/entities/picture/picture-detail.controller.js"></script>
         <script src="scripts/components/entities/picture/picture.service.js"></script>
+        <script src="scripts/app/entities/level/level.js"></script>
+        <script src="scripts/app/entities/level/level.controller.js"></script>
+        <script src="scripts/app/entities/level/level-detail.controller.js"></script>
+        <script src="scripts/components/entities/level/level.service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
