Creation Creation Modele - Table "Pictures"

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -144,6 +144,10 @@ span.wrap { padding: 10px; }
         <script src="scripts/app/entities/levels/levels.controller.js"></script>
         <script src="scripts/app/entities/levels/levels-detail.controller.js"></script>
         <script src="scripts/components/entities/levels/levels.service.js"></script>
+        <script src="scripts/app/entities/pictures/pictures.js"></script>
+        <script src="scripts/app/entities/pictures/pictures.controller.js"></script>
+        <script src="scripts/app/entities/pictures/pictures-detail.controller.js"></script>
+        <script src="scripts/components/entities/pictures/pictures.service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
