--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -148,6 +148,10 @@ span.wrap { padding: 10px; }
         <script src="scripts/app/entities/pictures/pictures.controller.js"></script>
         <script src="scripts/app/entities/pictures/pictures-detail.controller.js"></script>
         <script src="scripts/components/entities/pictures/pictures.service.js"></script>
+        <script src="scripts/app/entities/tags/tags.js"></script>
+        <script src="scripts/app/entities/tags/tags.controller.js"></script>
+        <script src="scripts/app/entities/tags/tags-detail.controller.js"></script>
+        <script src="scripts/components/entities/tags/tags.service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
