Creation Modele - Table "Species"

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -152,6 +152,10 @@ span.wrap { padding: 10px; }
         <script src="scripts/app/entities/tags/tags.controller.js"></script>
         <script src="scripts/app/entities/tags/tags-detail.controller.js"></script>
         <script src="scripts/components/entities/tags/tags.service.js"></script>
+        <script src="scripts/app/entities/species/species.js"></script>
+        <script src="scripts/app/entities/species/species.controller.js"></script>
+        <script src="scripts/app/entities/species/species-detail.controller.js"></script>
+        <script src="scripts/components/entities/species/species.service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
