Creation Modele - Tables "UserSpecies" & "UserStars"

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -156,6 +156,14 @@ span.wrap { padding: 10px; }
         <script src="scripts/app/entities/species/species.controller.js"></script>
         <script src="scripts/app/entities/species/species-detail.controller.js"></script>
         <script src="scripts/components/entities/species/species.service.js"></script>
+        <script src="scripts/app/entities/userStars/userStars.js"></script>
+        <script src="scripts/app/entities/userStars/userStars.controller.js"></script>
+        <script src="scripts/app/entities/userStars/userStars-detail.controller.js"></script>
+        <script src="scripts/components/entities/userStars/userStars.service.js"></script>
+        <script src="scripts/app/entities/userSpecies/userSpecies.js"></script>
+        <script src="scripts/app/entities/userSpecies/userSpecies.controller.js"></script>
+        <script src="scripts/app/entities/userSpecies/userSpecies-detail.controller.js"></script>
+        <script src="scripts/components/entities/userSpecies/userSpecies.service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
