--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -61,7 +61,6 @@ span.wrap { padding: 10px; }
         <script src="bower_components/modernizr/modernizr.js"></script>
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="jquery.annotate.js"></script>
-         <script src="annotorious.min.js"></script>
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="bower_components/angular-resource/angular-resource.js"></script>
@@ -141,5 +140,10 @@ span.wrap { padding: 10px; }
         <script src="scripts/app/account/sessions/sessions.js"></script>
         <script src="scripts/app/account/sessions/sessions.controller.js"></script>
         <!-- endbuild -->
+        
+        <!--others-->
+          <script src="annotorious.min.js"></script>
+         <script src="angular-openseadragon.js"></script>
+         <!--others-->
 </body>
 </html>
