--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -8,7 +8,9 @@
             <p class="lead" translate="main.subtitle">This is your homepage</p>
           
             <img src="/assets/images/hipster.png" annotorious/>
-          
+            <!--<div ng-controller="">
+          <seadragon options="options" />
+          </div>-->
 
         <button type="button" onclick="getAnnotations(this)">Serialize</button>
         <br/>
