--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -164,10 +164,10 @@ span.wrap { padding: 10px; }
         <script src="scripts/app/entities/userSpecies/userSpecies-detail.controller.js"></script>
         <script src="scripts/components/entities/userSpecies/userSpecies.service.js"></script>
         <!-- endbuild -->
-        
+
         <!--others-->
           <script src="annotorious.min.js"></script>
-         <script src="angular-openseadragon.js"></script>
+      <!--   <script src="angular-openseadragon.js"></script>-->
          <!--others-->
 </body>
 </html>
