--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -166,8 +166,9 @@ span.wrap { padding: 10px; }
         <!-- endbuild -->
 
         <!--others-->
+         <script src="bower_components/openseadragon/built-openseadragon/openseadragon/openseadragon.min.js"></script>
           <script src="annotorious.min.js"></script>
-      <!--   <script src="angular-openseadragon.js"></script>-->
+<!--                 <script src="angular-openseadragon.js"></script>-->
          <!--others-->
 </body>
 </html>
