--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -22,6 +22,27 @@
                      translate="main.logged.message" translate-values="{username: '{{account.login}}'}">
                     You are logged in as user "Admin".
                 </div>
+                
+                <table>
+	                <tr >
+	                    <td  >
+	                        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Marais_du_Nord.jpg/310px-Marais_du_Nord.jpg"/>
+	                        <img src="http://recitmst.qc.ca/local/cache-vignettes/L236xH55/5etoiles-fcf47.jpg" align="center"/>
+	                    </td>
+	                    <td>
+	                        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Marais_du_Nord.jpg/310px-Marais_du_Nord.jpg" />
+	                        <img src="http://recitmst.qc.ca/local/cache-vignettes/L236xH55/5etoiles-fcf47.jpg" align="center"/>
+	                    </td>
+	                    <td>
+	                        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Marais_du_Nord.jpg/310px-Marais_du_Nord.jpg"/>
+	                        <img src="http://recitmst.qc.ca/local/cache-vignettes/L236xH55/5etoiles-fcf47.jpg" />
+	                    </td>
+	                    <td>
+	                        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Marais_du_Nord.jpg/310px-Marais_du_Nord.jpg"/>
+	                        <img src="http://recitmst.qc.ca/local/cache-vignettes/L236xH55/5etoiles-fcf47.jpg" align="center"/>
+	                    </td>
+	                </tr>
+        		</table>
 
                 <div class="alert alert-warning" ng-switch-when="false" translate="global.messages.info.authenticated">
                     If you want to <a href="#/login">authenticate</a>, you can try the default login="admin" and
