Recuperération des espèces et image et affichage d'une image à partir de la bdd

--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -20,8 +20,8 @@
                 <table  align="center"  cellpadding="10">
 	                <tr align="center">
 	                    <td style="padding-right:10px" >
-	                        <a onclick="launchLevel()"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Marais_du_Nord.jpg/310px-Marais_du_Nord.jpg"/></a>
-	                        <img src="/assets/images/2etoiles.png" align="center"/>
+	                        <a onclick="launchLevel()"><img ng-src="{{picturess[0].url_picture}}"/></a>
+	                        <img src="/assets/images/3etoiles.png" align="center"/>
 	                    </td>
 	                    <td style="padding-right:10px">
 	                        <a onclick="launchLevel()"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Marais_du_Nord.jpg/310px-Marais_du_Nord.jpg" /></a>
