--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -22,7 +22,7 @@
                 <tr ng-repeat="level in (levelss.length/2 | array)">
                 
 							<td ng-repeat="level in levelss.slice(2*$index, 2*$index + 2)" style="padding-right:10px" >
-		                        <a ng-click="launchLevel(level.picture)"><img ng-src="{{level.picture.url_picture}}" width="310" height="227" /></a>
+		                        <a ng-click="launchLevel(level)"><img ng-src="{{level.picture.url_picture}}" width="310" height="227" /></a>
 		                        <img ng-src="{{getNbStars(level)}}" align="center"/>
 		                     
 	                   		</td>
