openseedragon is back on frontpage, but it is still ugly

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -84,7 +84,11 @@ span.wrap { padding: 10px; }
         <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
         <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/collapse.js"></script>
         <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/tab.js"></script>
+        <script src="bower_components/openseadragon/built-openseadragon/openseadragon/openseadragon.js"></script>
         <!-- endbuild -->
+
+        <!-- It sucks they do not have a bower repo, well they have but it is not prod ready -->
+        <script src="scripts/annotorious/annotorious.min.js"></script>
 
         <!-- build:js scripts/app.js -->
         <script src="scripts/app/app.js"></script>
@@ -164,11 +168,5 @@ span.wrap { padding: 10px; }
         <script src="scripts/app/entities/userSpecies/userSpecies-detail.controller.js"></script>
         <script src="scripts/components/entities/userSpecies/userSpecies.service.js"></script>
         <!-- endbuild -->
-
-        <!--others-->
-         <script src="bower_components/openseadragon/built-openseadragon/openseadragon/openseadragon.min.js"></script>
-          <script src="annotorious.min.js"></script>
-<!--                 <script src="angular-openseadragon.js"></script>-->
-         <!--others-->
 </body>
 </html>
