--- a/src/main/webapp/scripts/app/entities/species/species-detail.html
+++ b/src/main/webapp/scripts/app/entities/species/species-detail.html
@@ -12,10 +12,10 @@
             <tbody>
                 <tr>
                     <td>
-                        <span translate="ludecolApp.species.id_species">Id_species</span>
+                        <span translate="ludecolApp.species.id">Id</span>
                     </td>
                     <td>
-                        <input type="text" class="input-sm form-control" value="{{species.id_species}}" readonly>
+                        <input type="text" class="input-sm form-control" value="{{species.id}}" readonly>
                     </td>
                 </tr>
                 <tr>
