--- a/src/main/webapp/scripts/app/entities/userSpecies/userSpecies-detail.html
+++ b/src/main/webapp/scripts/app/entities/userSpecies/userSpecies-detail.html
@@ -10,6 +10,22 @@
                 </tr>
             </thead>
             <tbody>
+            	<tr>
+                    <td>
+                        <span translate="ludecolApp.userSpecies.species">Species</span>
+                    </td>
+                    <td>
+                        <input type="text" class="input-sm form-control" value="{{userSpecies.species.id}}" readonly>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <span translate="ludecolApp.userSpecies.user">User</span>
+                    </td>
+                    <td>
+                        <input type="text" class="input-sm form-control" value="{{userSpecies.user.id}}" readonly>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
