--- a/src/main/webapp/scripts/app/entities/userStars/userStars-detail.html
+++ b/src/main/webapp/scripts/app/entities/userStars/userStars-detail.html
@@ -26,6 +26,22 @@
                         <input type="text" class="input-sm form-control" value="{{userStars.nb_stars}}" readonly>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <span translate="ludecolApp.userStars.level">Level</span>
+                    </td>
+                    <td>
+                        <input type="text" class="input-sm form-control" value="{{userStars.level.id}}" readonly>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <span translate="ludecolApp.userStars.user">User</span>
+                    </td>
+                    <td>
+                        <input type="text" class="input-sm form-control" value="{{userStars.user.id}}" readonly>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
