--- a/src/main/webapp/scripts/app/entities/userStars/userStarss.html
+++ b/src/main/webapp/scripts/app/entities/userStars/userStarss.html
@@ -35,6 +35,16 @@
                             <input type="number" class="form-control"
                                    ng-model="userStars.nb_stars">
                         </div>
+                        <div class="form-group">
+                            <label translate="ludecolApp.userStars.level">Level</label>
+                            <input type="number" class="form-control"
+                                   ng-model="userStars.level.id">
+                        </div>
+                        <div class="form-group">
+                            <label translate="ludecolApp.userStars.nb_stars">User</label>
+                            <input type="number" class="form-control"
+                                   ng-model="userStars.user.id">
+                        </div>
 
 
                     </div>
@@ -83,6 +93,8 @@
                     <th>ID</th>
                     <th translate="ludecolApp.userStars.level_played">Level_played</th>
                     <th translate="ludecolApp.userStars.nb_stars">Nb_stars</th>
+                    <th translate="ludecolApp.userStars.nb_stars">Level</th>
+                    <th translate="ludecolApp.userStars.nb_stars">User</th>
                     <th></th>
                 </tr>
             </thead>
@@ -91,6 +103,8 @@
                     <td><a ui-sref="userStarsDetails({id:userStars.id})">{{userStars.id}}</a></td>
                     <td>{{userStars.level_played}}</td>
                     <td>{{userStars.nb_stars}}</td>
+                    <td>{{userStars.level.id}}</td>
+                    <td>{{userStars.user.id}}</td>
                     <td>
                         <button type="submit"
                                 ui-sref="userStarsDetail({id:userStars.id})"
